nginxTest-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginxTest-svc
  namespace: nginxTest
  labels:
    app: nginxTest-app
spec:
  type: ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginxTest-app
